--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -4,5 +4,5 @@ db.maxWaitMillis=10000
 db.driverClassName=com.intersystems.jdbc.IRISDriver
 db.username=_SYSTEM
 db.password=PASSWORD
-#db.url=jdbc:IRIS://127.0.0.1:9091/User
-db.url=jdbc:IRIS://my-iris:1972/User
+db.url=jdbc:IRIS://127.0.0.1:9091/User
+#db.url=jdbc:IRIS://my-iris:1972/User
