--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,6 @@ version: '3.6'
 services:
   iris:
     container_name: my-iris
-#    build:
-#      dockerfile: Dockerfile
     image: intersystemsdc/iris-community
     restart: always
     command: --check-caps false
@@ -11,7 +9,10 @@ services:
       - "9092:52773"
       - "9091:1972"
     volumes:
-      - ./iris:/irisrun/repo
+      - ./iris/scripts/init.sql:/docker-entrypoint-initdb.d/init.sql
+    environment:
+      IRIS_USERNAME: _SYSTEM
+      IRIS_PASSWORD: PASSWORD
   app:
     container_name: quiz-app
     depends_on:
