- Added Liquibase for IRIS; - Added init tables using Liquibase IRIS: InitDb.java; - Updated app container to wait for IRIS db start up

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,15 +8,19 @@ services:
     ports:
       - "9092:52773"
       - "9091:1972"
-    volumes:
-      - ./iris/scripts/init.sql:/docker-entrypoint-initdb.d/init.sql
     environment:
       IRIS_USERNAME: _SYSTEM
       IRIS_PASSWORD: PASSWORD
+    healthcheck:
+      test: iris terminal IRIS
+      interval: 1s
+      timeout: 3s
+      retries: 30
   app:
     container_name: quiz-app
     depends_on:
-      - iris
+      iris:
+        condition: service_healthy
     build:
       context: .
       dockerfile: Dockerfile
