- Added support of ChatGPT to create new questions

--- a/src/main/resources/application_lang.properties
+++ b/src/main/resources/application_lang.properties
@@ -36,6 +36,7 @@ edit=Edit
 edit-user=Editing User
 edit-quiz=Editing Quiz
 confirm=Confirm
+chat-gpt=Use ChatGPT
 list-questions=Questions
 add-quiz=Add new quiz
 prompt=Question
